--- a/final_project_template/final.html
+++ b/final_project_template/final.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8">
-    <link href="https://fonts.googleapis.com/css?family=DM+Serif+Text|Lato|Oswald|Raleway&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=DM+Serif+Text|Oswald&display=swap" rel="stylesheet">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mikaela Da Silva</title>
@@ -15,6 +15,7 @@
   </head>
 
   <body>
+
     <header>
       <nav>
         <a class="hamburger" href=""><i class="fa fa-bars"></i></a>
@@ -24,36 +25,48 @@
       </nav>
       <h1> Mikaela Da Silva </h1>
       <div class="social">
-        <a href=""><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
+        <a href="https://www.facebook.com/mikmikds"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
         <a href=""><i class="fa fa-twitter-square" aria-hidden="true"></i></a>
-        <a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>
+        <a href="https://www.instagram.com/dinomik/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
       </div>
     </header>
 
-
-    <h2>Welcome!</h2>
-
-
     <section>
-      <a href="#About">
+      <h2>Welcome!</h2>
+      <img src="img/bg.png" alt="">
+    </section>
+
+    <aside>
+      <a href="#About" class="slide">
         <p>About.</p>
       </a>
 
-      <a href="#Portfolio">
+      <a href="#Portfolio" class="slide">
         <p>Portfolio.</p>
       </a>
 
-      <a href="Contact">
+      <a href="#Contact" class="slide">
         <p>Contact.</p>
       </a>
-    </section>
+    </aside>
 
-    <div>
+    <main>
+      <article>
+        <h3 id="About">About.</h3>
+        <div>
+          <img src="img/myself.jpg" alt="Mikaela">
+          <p>Hi everyone! My name is Mikaela Da Silva, and I'm a web designer and front-end web developer. My passion has always been in the creative field. I love pushing my limits and creating content for my consumers. I've taught myself how to use
+            adobe programs such as Photoshop, Lightroom, InDesign, and Illustrator. I also taken General Assembly bootcamp for HTML, CSS, and Javascript. My ultimate goal is to use my passion and skills that I've developed in the years towards a job
+            in the industry.
+          </p>
+        </div>
+      </article>
+    </main>
 
 
-      <script src="js/jquery-1.12.0.min.js">
-      </script>
-      <script src="js/main.js"></script>
+    <script src="js/jquery-1.12.0.min.js">
+    </script>
+    <script src="js/main.js"></script>
   </body>
 
 </html>
